rendering, has a pie menu

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         top: 1em;
         left: 1em;
       }
-    </style>
+    </style> 
   </head>
   <body style="padding: 0px; margin: 0px">
     <div id="app"></div>
+    <canvas id="app-canvas" style="position: fixed; top: 0px; left: 0px;"></canvas>
     <div id="debugtext"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
